--- a/Plantilla.html
+++ b/Plantilla.html
@@ -12,8 +12,8 @@
 		<h2>{{ nombre_ciudades }}</h2>
 		<u1>
 		
-				<li>Temperatura minima prevista: {{ temperaturaminreal[cont] }} C</li>
-				<li>Temperatura maxima prevista: {{ temperaturamaxreal[cont] }} C</li>
+				<li>Temperatura minima prevista: {{ temperaturaminreal[cont] }} &deg;C</li>
+				<li>Temperatura maxima prevista: {{ temperaturamaxreal[cont] }} &deg;C</li>
 				<li>Viento: {{ vientreal[cont] }} Km/h, Direccion: {{ direcc_viento[cont] }} </li>
 				
 		</u1>
